# Sumo-venv

./: README.md
Sumo DE/python-accessible-game/src/: player.py
SumoDE/python-accessible-game/: README.md  pyproject.toml  requirements.txt
SumoDE/python-accessible-game/src/: audio.py  controllers.py  game.py  input.py  main.py  map.py  player.py  ui.py
SumoDE/python-accessible-game/src/accessibility/: controller_labels.py  screen_reader.py
SumoDE/python-accessible-game/src/resources/locale/: en-US.json
SumoDE/python-accessible-game/tests/: test_game.py  test_input.py
sumoVenv/: pyvenv.cfg
sumoVenv/Scripts/: activate  activate.bat
