[tool.poetry]
name = "python-accessible-game"
version = "0.1.0"
description = "A Python game project that supports accessibility with controllers."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"